# lenny_projet

./: README.md  client.py  clientDERLICA.py  clientIGNAM.py  pyproject.toml  server.py  serverDERLICA.py  serverIGNAM.py  simu.py  temp_server.py
