[project]
name = "demomodbus"
version = "0.1.0"
description = "ModBus TCP server and client with Python and pymodbus package"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pymodbus>=3.11.2",
]

[dependency-groups]
dev = []

from pymodbus.server import StartTcpServer
from pymodbus.datastore import ModbusSequentialDataBlock, ModbusDeviceContext, ModbusServerContext

# Initialisation des données (coils, holding registers, etc.)
store = ModbusDeviceContext(
    di=ModbusSequentialDataBlock(0, [0]*100),    # Discrete Inputs
    co=ModbusSequentialDataBlock(0, [0]*100),    # Coils
    hr=ModbusSequentialDataBlock(0, [7]*100),   # Holding Registers
    ir=ModbusSequentialDataBlock(0, [0]*100)     # Input Registers
)

# Contexte du serveur (1 slave par défaut, unit_id=1)
context = ModbusServerContext(devices = store, single=True)

# Démarrer le serveur sur le port 5020
StartTcpServer(context=context, address=("127.0.0.1", 502))



# Adresse du registre où le pH sera stockée
pH_REGISTER = 0
STATUS_COIL = 0

def pH_simulation(context, slave_id=0x00):
    """Simule une variation de pH toutes les secondes."""
    pH = 72  # pH initiale (ex: 7.2pH, multipliée par 10)
    while True:
        status = context[slave_id].getValues(1, STATUS_COIL)[0]
        if status:  # Si la piscine fonctionne
            # Variation aléatoire du pH
            pH += random.randint(-3, 3)
            if pH < 60:
                pH = 60
            if pH > 80:
                pH = 80
            # Mise à jour du registre
            context[slave_id].setValues(4, pH_REGISTER, [pH])

    #    print(f"pH actuel: {pH/10:.1f}, status: {'ON' if status else 'OFF'}")

        time.sleep(1)

if __name__ == "__main__":
    # Création du datastore Modbus avec un registre de 10 mots
    device = ModbusDeviceContext(
        co=ModbusSequentialDataBlock(0, [True]*10),    # en marche initialement
        ir=ModbusSequentialDataBlock(0, [72]*10)  # 7.2 pH initial
    )
    context = ModbusServerContext(devices=device, single=True)

    # Lancement du thread de simulation de pH
    sim_thread = Thread(target=pH_simulation, args=(context,))
    sim_thread.daemon = True
    sim_thread.start()

    # Démarrage du serveur Modbus TCP sur le port 502
    print("Serveur Modbus TCP démarré sur le port 502...")
    StartTcpServer(context, address=("127.0.0.1", 502))

